--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
-bevy = "0.11.3"
+bevy = { version = "0.11.3", features = ["dynamic_linking"] }
 rand = "0.8.5"
 num = "0.4.1"
 
